--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -274,8 +274,7 @@ The result shows a positve cross elasticity of demand, which prove peak-period r
  ---
  
   f. <span style="color:grey">Please draw a demand curve and answer the following questions using the diagram:</span>
-
-```{r echo=FALSE}
+```{r echo=FALSE,fig.height=3}
 plot(c(0,40000), c(0,0.4), type = "n",xlab ="## of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
 curve(0.6130826+(0.1-0.25)/(32290-22850)*x, 10000, 35000, add = TRUE)
 points(22850, 0.25, pch =0);text(22850, 0.25,"Before",adj=c(-0.5,-0.5))
@@ -286,7 +285,6 @@ polygon(x=c(22850,32290,22850), y=c(0.1,0.1,0.25), density=10, angle=45,lty =3);
 for new riders")
 ```
 
-
    (i) <span style="color:grey">Label the area of total daily benefits to off-peak riders, as measured by the increase in consumer surplus, of the “Dime Time” experiment?</span>
 
 The whole shadow areas represent the increse in off-peak consumer surplus, which equal $\frac12(22850+32290)\times(0.25-0.1)=4135.5$
@@ -296,9 +294,8 @@ The whole shadow areas represent the increse in off-peak consumer surplus, which
 The left shadow area represents the increse in consumer surplus for previous passengers during the midday, which equals $22850\times(0.25-0.1)=3427.5$
 
   (iii) <span style="color:grey">Describe verbally how were the benefits in (ii) divided among riders in the three income groups?</span>
-
-```{r echo=FALSE}
-plot(c(0,40000), c(0,0.4), type = "n",xlab ="# of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
+```{r echo=FALSE,fig.height=2}
+plot(c(0,40000), c(0,0.4), type = "n",xlab ="Number of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
 curve(0.25-(0.1-0.25)/(15020-9500)*9500+(0.1-0.25)/(15020-9500)*x, 0, 35000, add = TRUE);text(21000,0.03, "Low
 income")
 curve(0.25-(0.1-0.25)/(10860-8250)*8250+(0.1-0.25)/(10860-8250)*x, 0, 35000, add = TRUE);text(14500,0.03, "Mid
@@ -313,7 +310,6 @@ polygon(x=c(6410,10860,8250,5100), y=c(0.1,0.1,0.25,0.25), density=10, angle=45,
 polygon(x=c(10860,15020,9500,8250), y=c(0.1,0.1,0.25,0.25), density=10, angle=0,lty =3)
 abline(h =0.25, lty=3);text(1000,0.27, "0.25");abline(h =0.1, lty=3);text(1000,0.12, "0.1")
 ```
-
 |     |previous consumer surplus | new consumer surplus | total surplus
 | ---       | ---  | ---  | --- |
 |Low income |1425  |414   |1839 
@@ -363,8 +359,7 @@ According to the model, when gasoline tax increases $0.25, the expected amount o
  ---
 
   b. <span style="color:grey">Use budget lines and indifference curves to illustrate the effect of the tax increase on gasoline consumption and consumer welfare (utility). In addition to the total effect, please label the substitution and income effects.</span>
-
-```{r echo=FALSE}
+```{r echo=FALSE, fig.height=3}
 plot(c(0,5), c(0,5), type = "n",xlab ="Gasline consumption", ylab ="Substitution Good",xaxs = "i",yaxs = "i")
 curve(x^(-2), 0, 8,col = "red",add = TRUE,);text(0.5,4.5, "U1");
 abline(a=3,b=-2, lty = 1);points(1,1, pch =1);text(1,1,"C",adj=c(-0.5,-0.5))
@@ -435,10 +430,8 @@ How to distinguish cause and effect? One answer is that causality is an asymmetr
 
 As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, which can be demonstrated by a logistic function or S-curve. The x-axis is the time process and the y-axis represents the economic growth for a given background including social, geographic and technology conditions. If the transportation projects happened at the beginning or the end of the curve, the project is a relatively strong factor to the economy. We can say supply led transportation stimulates economic development. If the projects happened during the mid-segment of the curve, the project is a relatively weak factor and we would tend to use demand-led to explain this event.
 
-<img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
-
 My conclusion is that the value of slope $=1$ is two balance points which relate to some critical stages. When the slope is approaching 1, which means the project may leverage the economic development; when the slope is away from 1 to the inflection point, the project may Lags behind the economy and need ahead investment. After the inflection point, the project will have less and less stimulating effects. When the slope is away from 1 again and convergent to 0, the policy decision for a megaproject should be more conservative.
-
+<img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
 
  * Reference
 
