--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -429,7 +429,7 @@ The supply-led view treats transportation projects as one cause of economic deve
 
 How to distinguish cause and effect? One answer is that causality is an asymmetric relation between cause and effect. In process philosophy, it needs to examine the process, event, becoming or happening to recognize the cause and every effect. Causal processes, which is more important than causal relationships or causal interactions, can be identified by their ability to transmit an alteration over space and time (Salmon, 1984).  There are many theories such as probabilistic causation, causal calculus, structure learning, etc. (Hernán MA, 2019). Here we use time series as a simple way to infer their relation and process.
 
-As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, which can be demonstrated by a logistic function or S-curve. The x-axis is the time process and the y-axis represents the economic growth for a given background including social, geographic and technology conditions. If the transportation projects happened at the beginning or the end of the curve, the project is a relatively strong factor to the economy. We can say supply led transportation stimulates economic development. If the projects happened during the mid-segment of the curve, the project is a relatively weak factor and we would tend to use demand-led to explain this event.
+As many natural processes, The long economic cycles exhibit a progression from small beginnings that accelerates and approaches a climax over time, which synchronize with the diffusion of various innovations, infrastructures and energy source substitutions. It can be demonstrated by a logistic function or S-curve. For a given background including social, geographic and technology conditions, the x-axis is the time process and the y-axis represents the economic growth. If the transportation projects happened at the beginning or the end of the curve, the project is a relatively strong factor to the economy. We can say supply led transportation stimulates economic development. If the projects happened during the mid-segment of the curve, the project is a relatively weak factor and we would tend to use demand-led to explain this event.
 
 My conclusion is that the value of slope $=1$ is two balance points which relate to some critical stages. When the slope is approaching 1, which means the project may leverage the economic development; when the slope is away from 1 to the inflection point, the project may Lags behind the economy and need ahead investment. After the inflection point, the project will have less and less stimulating effects. When the slope is away from 1 again and convergent to 0, the policy decision for a megaproject should be more conservative.
 <img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
@@ -438,8 +438,8 @@ My conclusion is that the value of slope $=1$ is two balance points which relate
 
   _[1] Gibbs, M.N. (2000). Variational Gaussian process classifiers. IEEE Transactions on Neural Networks. 11 (6): 1458–1464._
 
-  _[1] Hernán MA, Robins JM (2019). Causal Inference. Boca Raton: Chapman & Hall/CRC, forthcoming._
+  _[2] Hernán MA, Robins JM (2019). Causal Inference. Boca Raton: Chapman & Hall/CRC, forthcoming._
 
-  _[2] Mackie, John L. The Cement of the Universe: A study in Causation. Clarendon Press, Oxford, England, 1988._
+  _[3] Mackie, John L. The Cement of the Universe: A study in Causation. Clarendon Press, Oxford, England, 1988._
   
-  _[3] Salmon, W. (1984) Scientific Explanation and the Causal Structure of the World. Princeton University Press._
+  _[4] Salmon, W. (1984) Scientific Explanation and the Causal Structure of the World. Princeton University Press._
