--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -458,7 +458,7 @@ According to theorem 6.2.6 (Factorization Theorem) Let $f(\mathbf{x}|\alpha,\bet
 
 $$f(\mathbf{x}|\alpha,\beta)=\prod_{i=1}^nf(x_i)=\prod_{i=1}^n\frac{x_i^{\alpha-1}}{\Gamma(\alpha)\beta^{\alpha}}e^{-\frac{x_i}{\beta}}=\frac{1}{\Gamma(\alpha)^n\beta^{n\alpha}}\cdot(\prod_{i=1}^nx_i)^{\alpha}\cdot e^{-\frac{1}{\beta}\sum\limits_{i=1}^nx_i}\cdot \prod_{i=1}^nx_i^{-1}$$
 
-Therefore, $T(\prod_{i=1}^nx_i,\sum\limits_{i=1}^nx_i)$ is a sufficient statistic for $(\alpha,\beta)$
+Therefore, $T(\prod_{i=1}^nx_i,\sum_{i=1}^nx_i)$ is a sufficient statistic for $(\alpha,\beta)$
 
  ---
 
@@ -483,15 +483,15 @@ Therefore, $\sum_{i=1}^ny_i-\sum_{i=1}^nx_i=0$ that is $T(\bar x)=T(\bar y)\iff 
  
 **6.10** Show that the minimal sufficient statistic for the uniform(O, 0 + 1 ) , found in Example 6.2.15, is not complete.
 
-To prove $T(\mathbf{X})=(X_{(1)},X_{(n)})$ is not complete, we want to find $g[T(\mathbf{X})]$ such that $Eg[T(\mathbf{X})]=0$ for all $\theta$, but $g[T(\mathbf{X})]\not\equiv 0 $. A natural candidate is $R=X_{(n)}−X_{(1)}$, the range of X, because by Example 6.2.17 its distribution does not depend on $\theta$. From Example 6.2.17, $R\sim beta(n−1,2)$. Thus $ER=(n−1)/(n+1)$ does not depend on $\theta$, and $E(R−ER)=0$ for all $\theta$. Thus
-$g[X(n),X(1)]=X(n)−X(1)−(n−1)/(n+1)=R−ER$ is a nonzero function whose expected value is always 0. So, $(X_{(1)},X_{(n)})$ is not complete. This problem can be generalized to show that if a function of a sufficient statistic is ancillary, then the sufficient statistic is not complete, because the expectation of that function does not depend on $\theta$. That provides the opportunity to construct an unbiased, nonzero estimator of zero.
+To prove $T(\mathbf{X})=(X_{(1)},X_{(n)})$ is not complete, we want to find $g[T(\mathbf{X})]$ such that $Eg[T(\mathbf{X})]=0$ for all $\theta$, but $g[T(\mathbf{X})]\not\equiv0$. A natural candidate is $R=X_{(n)}−X_{(1)}$, the range of X, because by Example 6.2.17 its distribution does not depend on $\theta$. From Example 6.2.17, $R\sim beta(n−1,2)$. Thus $ER=(n−1)/(n+1)$ does not depend on $\theta$, and $E(R−ER)=0$ for all $\theta$. Thus
+$g[X_{(n)},X_{(1)}]=X_{(n)}−X_{(1)}−(n−1)/(n+1)=R−ER$ is a nonzero function whose expected value is always 0. So, $(X_{(1)},X_{(n)})$ is not complete. This problem can be generalized to show that if a function of a sufficient statistic is ancillary, then the sufficient statistic is not complete, because the expectation of that function does not depend on $\theta$. That provides the opportunity to construct an unbiased, nonzero estimator of zero.
 
 
  ---
 
 **6.13** Suppose Xl and X2 are iid observations from the pdf j(xla) =, x > o, a >O. Show that (log XI )/(log X2) is an ancillary statistic.
 
-Let $Y_1 = \lnX_1$ and $Y_2 =\lnX_2$. Then $Y_1$ and $Y_2$ are iid and, by Theorem 2.1.5, the pdf of each is
+Let $Y_1 = \ln X_1$ and $Y_2 =\ln X_2$. Then $Y_1$ and $Y_2$ are iid and, by Theorem 2.1.5, the pdf of each is
 
 We see that the family of distributions of Yi is a scale family with scale parameter $\frac1{\alpha}$. Thus,
 by Theorem 3.5.6, we can write $Y_i=\frac1{\alpha}Z_i$, where Z_1 and Z_2 are a random sample from $f(z|1)$.
