--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -471,14 +471,34 @@ $$\frac{f(x|\theta)}{f(y|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)
 Therefore, $\sum_{i=1}^ny_i-\sum_{i=1}^nx_i=0$ that is $T(\bar x)=T(\bar y)\iff T(\bar X)$ is a minimal sufficient statistic for $\theta$
  
   (b). $f(x|\theta)=\mathrm{e}^{-(x-\theta)} ,\theta<x<\infty,-\infty<\theta<\infty$ (location exponential)
- 
+
+$$\frac{f(x|\theta)}{f(y|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)}=\frac{\prod_{i=1}^n[\mathrm{e}^{-(x_i-\theta)}I_{(\theta,\infty)}(x_i)]}{\prod_{i=1}^n[\mathrm{e}^{-(y_i-\theta)}I_{(\theta,\infty)}(y_i)]}=\frac{\mathrm{e}^{\sum_{i=1}^ny_i}I_{(\theta,\infty)}(x_i)}{\mathrm{e}^{\sum_{i=1}^nx_i}I_{(\theta,\infty)}(y_i)}$$
+
+To make the ratio independent of $\theta$ we need the ratio of indicator functions independent of $\theta$. This will be the case if and only if $min{x_1,..,x_n} =\min{y_1,..,y_n}$. So $T(X)=\min{X_1,..,X_n}$ is a minimal sufficient statistic.
+
   (c). $f(x|\theta)=\frac{\mathrm{e}^{-(x-\theta)}}{(1+\mathrm{e}^{-(x-\theta)})^2} ,-\infty<x<\infty,-\infty<\theta<\infty$ (logistic)
- 
+
+$$\frac{f(x|\theta)}{f(y|\theta)}=\frac{\prod_{i=1}^nf(x_i)}{\prod_{i=1}^nf(y_i)}=\frac{\frac{\mathrm{e}^{-\sum_{i=1}^n(x_i-\theta)}}{\prod_{i=1}^n(1+\mathrm{e}^{-(x_i-\theta)})^2}}{\frac{\mathrm{e}^{-\sum_{i=1}^n(y_i-\theta)}}{\prod_{i=1}^n(1+\mathrm{e}^{-(y_i-\theta)})^2}}=\mathrm{e}^{\sum_{i=1}^n(y_i-x_i)}\frac{\prod_{i=1}^n(1+\mathrm{e}^{-(y_i-\theta)})^2}{\prod_{i=1}^n(1+\mathrm{e}^{-(x_i-\theta)})^2}$$
+
+This is constant as a function of $\theta$ if and only if x and y have the same order statistics. Therefore, the order statistics are minimal sufficient for $\theta$. 
+
   (d). $f(x|\theta)=\frac{1}{\pi[1+\mathrm{e}^{-(x-\theta)^2}]} ,-\infty<x<\infty,-\infty<\theta<\infty$ (Cauchy)
- 
+
+
+
+The order statistics are a minimal sufficient statistic.
+
   (e). $f(x|\theta)=\frac12\mathrm{e}^{-|x-\theta|} ,-\infty<x<\infty,-\infty<\theta<\infty$ (double exponential)
  
- 
+Fix sample points x and y. Define $A(\theta)={i:xi\le\theta},B(\theta)={i:yi\le\theta}$, $a(\theta)=$ the
+number of elements in $A(\theta)$ and $b(\theta)=$ the number of elements in $B(\theta)$. Then the function
+$f(x|\theta)/f(y|\theta)$ depends on $\theta$ only through the function
+
+$$\sum_{i=1}^n|x_i-\theta|-\sum_{i=1}^n|y_i-\theta|=\sum\limits_{i\in\mathcal{A}(\theta)}^n(\theta-x_i)+\sum\limits_{i\in\mathcal{A}(\theta)^C}^n(x_i-\theta)$$
+
+Consider an interval of $\theta$s that does not contain any xis or yis. The second term is constant on such an interval. The first term will be constant, on the interval if and only if $a(\theta)=b(\theta)$.
+This will be true for all such intervals if and only if the order statistics for x are the same as the order statistics for y. Therefore, the order statistics are a minimal sufficient statistic.
+
  ---
  
 **6.10** Show that the minimal sufficient statistic for the uniform(O, 0 + 1 ) , found in Example 6.2.15, is not complete.
