--- a/static/stat565/hw_stat565.Rmd
+++ b/static/stat565/hw_stat565.Rmd
@@ -301,10 +301,9 @@ library(olsrr)
 library(vcd)
 library(vcdExtra)
 library(multcompView)
-library(agricolae)
-library(asbio)
-library(pwr)
-library(car)
+library(agricolae) #LSD.test
+library(asbio) #pairw.anova
+library(pwr) 
 ```
 
   (a) Are the lives of these brands of batteries different?
@@ -328,7 +327,7 @@ summary(model_battery)
  - The residuals versus fitted values and studentized residuals show no violation of zero mean and constant variance assumptions.
  - There is not outlier and leverage data points. 
  - The residuals versus observation number shows the residuals are independent with each other.
- - The Bartlett’s test shows variances across samples is equal. 
+ - The Bartlett’s test shows variances across samples are not different. 
 
 ```{r echo=T,collapse=TRUE}
 ols_plot_diagnostics(lm(Life~Brand, data=table_battery))
@@ -547,5 +546,74 @@ GKgamma(xtabs(~Respone + Type,data=table_circuit,subset=!is.na(Type), drop.unuse
 leveneTest(Life ~ Brand, data = table_battery,center = "mean")
 
 ```
+
+
+
+
+
+## HW2
+
+### Problem 1 (4.9-29)
+
+Three different washing solutions are being compared to study their effectiveness in retarding bacteria growth in 5-gallon milk containers. The analysis is done in a laboratory,
+and only three trials can be run on any day. Because days could represent a potential source of variability, the experimenter decides to use a randomized block design. Observations
+are taken for four days, and the data are shown here. Analyze the data from this experiment (use $\alpha = 0.05$) and draw conclusions.
+
+```{r echo=T, collapse=TRUE}
+table_wash <- read_xlsx("Exercise4_4.xlsx")
+head(table_wash)
+model_wash <- aov(Response~Solution+Days, data=table_wash)
+summary(model_wash)
+```
+
+---
+
+4.29 Consider the randomized complete block design in Problem 4.9. Assume that the days are random. Estimate the block variance component.
+
+
+### Problem 2 (4.13)
+
+A consumer products company relies on direct mail marketing pieces as a major component of its advertising campaigns. The company has three different designs for a new brochure and wants to evaluate their effectiveness, as there are substantial differences in costs between the three designs.
+The company decides to test the three designs by mailing 5000 samples of each to potential customers in four different regions of the country. Since there are known regional differences in the customer base, regions are considered as blocks. The number of responses to each mailing is as follows.
+
+```{r echo=T, collapse=TRUE}
+table_mail <- read_xlsx("Exercise4_8.xlsx")
+head(table_mail)
+model_mail <- aov(Response~Design+Region, data=table_mail)
+summary(model_mail)
+```
+
+(a) Analyze the data from this experiment.
+
+(b) Use the Fisher LSD method to make comparisons among the three designs to determine specifically which designs differ in the mean response rate.
+
+```{r echo=T,collapse=TRUE}
+(LSD.test(model_mail, trt="Design",alpha = 0.05))
+pairw.anova(table_mail$Response,as.factor(table_mail$Design), conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+``` 
+
+(c) Analyze the residuals from this experiment.
+
+ - The histogram shows a normality of of residuals.
+ - The QQ plot of residuals doesn't show obvious problem of normality of residuals.
+ - The residuals versus fitted values and studentized residuals show no violation of zero mean and constant variance assumptions.
+ - There is not outlier and leverage data points. 
+ - The residuals versus observation number shows the residuals are independent with each other.
+ - The Bartlett’s test shows variances across samples are not different. 
+
+```{r echo=T,collapse=TRUE, out.width=0.45}
+plot(model_mail)
+ols_plot_diagnostics(lm(Response~Design+Region, data=table_mail))
+# bartlett.test(Response~Design+Region, data=table_mail)
+```
+
+### Problem 3
+
+$y_{ijkl}=μ+τ_i+α_{(j(l))}+β_k+δ_l+ε_{ijkl}$ for $i,j,k =1,…,p$ ; $l=1,…,n$; $ε_{ijkl}\sim iid N(0,σ^2 )$
+
+Derive the parameter estimates from the least squares method using the constrains
+
+$$\sum_i\hat\tau_i=0;\ \sum_j\hat\alpha_{j(l)}=0;\ \sum_l\hat\alpha_{j(l)}=0;\ \sum_k\hat\beta_k=0;\ \sum_l\hat\delta_l=0$$
+
 
 
